@@ -333,6 +333,13 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
                     <configuration>
+                        <argLine>
+                            -Djava.io.tmpdir=${project.build.directory}/tmp
+                            -Djdk.attach.allowAttachSelf=true
+                            -Dmockito.mock-maker=inline
+                        </argLine>
+                        <forkCount>1</forkCount>
+                        <reuseForks>false</reuseForks>
                         <includes>
                             <include>**/*Test.java</include>
                             <include>**/*Tests.java</include>
